--- a/pom.xml
+++ b/pom.xml
@@ -109,7 +109,20 @@
         <!-- Our Javadoc has poor enough quality to fail the build thanks to JDK8 javadoc which got more strict. -->
         <maven.javadoc.failOnError>false</maven.javadoc.failOnError>
         <!-- npn-boot does not work with JDK 8 -->
-        <argLine.bootcp>-D_</argLine.bootcp>
+        <jetty.alpn.version>8.1.0.v20141016</jetty.alpn.version>
+        <argLine.bootcp>-Xbootclasspath/p:${jetty.alpn.path}</argLine.bootcp>
+      </properties>
+    </profile>
+    <profile>
+      <id>alpn-8u25</id>
+      <activation>
+        <property>
+          <name>java.version</name>
+          <value>1.8.0_25</value>
+        </property>
+      </activation>
+      <properties>
+        <jetty.alpn.version>8.1.1.v20141016</jetty.alpn.version>
       </properties>
     </profile>
     <profile>
@@ -281,6 +294,8 @@
       </activation>
       <properties>
         <jetty.npn.version>1.1.6.v20130911</jetty.npn.version>
+        <jetty.alpn.version>7.1.0.v20141016</jetty.alpn.version>
+        <!-- Defer definition of Xbootclasspath to default or forcenpn profile -->
       </properties>
     </profile>
     <profile>
@@ -293,6 +308,8 @@
       </activation>
       <properties>
         <jetty.npn.version>1.1.6.v20130911</jetty.npn.version>
+        <jetty.alpn.version>7.1.0.v20141016</jetty.alpn.version>
+        <!-- Defer definition of Xbootclasspath to default or forcenpn profile -->
       </properties>
     </profile>
     <profile>
@@ -305,6 +322,109 @@
       </activation>
       <properties>
         <jetty.npn.version>1.1.6.v20130911</jetty.npn.version>
+        <jetty.alpn.version>7.1.0.v20141016</jetty.alpn.version>
+        <!-- Defer definition of Xbootclasspath to default or forcenpn profile -->
+      </properties>
+    </profile>
+    <profile>
+      <id>npn-alpn-7u55</id>
+      <activation>
+        <property>
+          <name>java.version</name>
+          <value>1.7.0_55</value>
+        </property>
+      </activation>
+      <properties>
+        <jetty.npn.version>1.1.8.v20141013</jetty.npn.version>
+        <jetty.alpn.version>7.1.0.v20141016</jetty.alpn.version>
+        <!-- Defer definition of Xbootclasspath to default or forcenpn profile -->
+      </properties>
+    </profile>
+    <profile>
+      <id>npn-alpn-7u60</id>
+      <activation>
+        <property>
+          <name>java.version</name>
+          <value>1.7.0_60</value>
+        </property>
+      </activation>
+      <properties>
+        <jetty.npn.version>1.1.8.v20141013</jetty.npn.version>
+        <jetty.alpn.version>7.1.0.v20141016</jetty.alpn.version>
+        <!-- Defer definition of Xbootclasspath to default or forcenpn profile -->
+      </properties>
+    </profile>
+    <profile>
+      <id>npn-alpn-7u65</id>
+      <activation>
+        <property>
+          <name>java.version</name>
+          <value>1.7.0_65</value>
+        </property>
+      </activation>
+      <properties>
+        <jetty.npn.version>1.1.8.v20141013</jetty.npn.version>
+        <jetty.alpn.version>7.1.0.v20141016</jetty.alpn.version>
+        <!-- Defer definition of Xbootclasspath to default or forcenpn profile -->
+      </properties>
+    </profile>
+    <profile>
+      <id>npn-alpn-7u67</id>
+      <activation>
+        <property>
+          <name>java.version</name>
+          <value>1.7.0_67</value>
+        </property>
+      </activation>
+      <properties>
+        <jetty.npn.version>1.1.8.v20141013</jetty.npn.version>
+        <jetty.alpn.version>7.1.0.v20141016</jetty.alpn.version>
+        <!-- Defer definition of Xbootclasspath to default or forcenpn profile -->
+      </properties>
+    </profile>
+    <profile>
+      <id>npn-alpn-7u71</id>
+      <activation>
+        <property>
+          <name>java.version</name>
+          <value>1.7.0_71</value>
+        </property>
+      </activation>
+      <properties>
+        <jetty.npn.version>1.1.9.v20141016</jetty.npn.version>
+        <jetty.alpn.version>7.1.0.v20141016</jetty.alpn.version>
+        <!-- Defer definition of Xbootclasspath to default or forcenpn profile -->
+      </properties>
+    </profile>
+    <profile>
+      <id>npn-alpn-7u72</id>
+      <activation>
+        <property>
+          <name>java.version</name>
+          <value>1.7.0_72</value>
+        </property>
+      </activation>
+      <properties>
+        <jetty.npn.version>1.1.9.v20141016</jetty.npn.version>
+        <jetty.alpn.version>7.1.0.v20141016</jetty.alpn.version>
+        <!-- Defer definition of Xbootclasspath to default or forcenpn profile -->
+      </properties>
+    </profile>
+    <profile>
+      <!--
+      This profile exists because either ALPN or NPN can exits on the class path at once, but not both.
+      The JDK version is typically used to distinguish which should be used but there is some overlap
+      where both could be used.  ALPN is the default and this profile is enabled with a -Dforcenpn=true arugument
+      -->
+      <id>forcenpn</id>
+      <activation>
+        <property>
+          <name>forcenpn</name>
+          <value>true</value>
+        </property>
+      </activation>
+      <properties>
+        <argLine.bootcp>-Xbootclasspath/p:${jetty.npn.path}</argLine.bootcp>
       </properties>
     </profile>
   </profiles>
@@ -313,8 +433,10 @@
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
     <jboss.marshalling.version>1.3.18.GA</jboss.marshalling.version>
-    <jetty.npn.version>1.1.7.v20140316</jetty.npn.version>
+    <jetty.npn.version>1.1.9.v20141016</jetty.npn.version>
     <jetty.npn.path>${settings.localRepository}/org/mortbay/jetty/npn/npn-boot/${jetty.npn.version}/npn-boot-${jetty.npn.version}.jar</jetty.npn.path>
+    <jetty.alpn.version>8.1.0.v20141016</jetty.alpn.version>
+    <jetty.alpn.path>${settings.localRepository}/org/mortbay/jetty/alpn/alpn-boot/${jetty.alpn.version}/alpn-boot-${jetty.alpn.version}.jar</jetty.alpn.path>
     <argLine.common>
       -server
       -dsa -da -ea:io.netty...
@@ -372,12 +494,22 @@
       <dependency>
         <groupId>org.eclipse.jetty.npn</groupId>
         <artifactId>npn-api</artifactId>
-        <version>1.1.0.v20120525</version>
+        <version>1.1.1.v20141010</version>
       </dependency>
       <dependency>
         <groupId>org.mortbay.jetty.npn</groupId>
         <artifactId>npn-boot</artifactId>
         <version>${jetty.npn.version}</version>
+      </dependency>
+      <dependency>
+        <groupId>org.eclipse.jetty.alpn</groupId>
+        <artifactId>alpn-api</artifactId>
+        <version>1.1.0.v20141014</version>
+      </dependency>
+      <dependency>
+        <groupId>org.mortbay.jetty.alpn</groupId>
+        <artifactId>alpn-boot</artifactId>
+        <version>${jetty.alpn.version}</version>
       </dependency>
 
       <!-- Google Protocol Buffers - completely optional -->
@@ -635,6 +767,14 @@
         <groupId>org.codehaus.mojo</groupId>
         <artifactId>animal-sniffer-maven-plugin</artifactId>
         <version>1.9</version>
+        <dependencies>
+            <!-- Upgrade ASM and support Java 8 bytecode -->
+            <dependency>
+                <groupId>org.ow2.asm</groupId>
+                <artifactId>asm-all</artifactId>
+                <version>5.0.3</version>
+            </dependency>
+        </dependencies>
         <configuration>
           <signature>
             <groupId>org.codehaus.mojo.signature</groupId>
@@ -761,7 +901,7 @@
               <instructions>
                 <Export-Package>${project.groupId}.*</Export-Package>
                 <!-- enforce JVM vendor package as optional -->
-                <Import-Package>sun.misc.*;resolution:=optional,sun.nio.ch;resolution:=optional,sun.security.*;resolution:=optional,*</Import-Package>
+                <Import-Package>sun.misc.*;resolution:=optional,sun.nio.ch;resolution:=optional,sun.security.*;resolution:=optional,org.eclipse.jetty.npn;version="[1,)";resolution=optional,org.eclipse.jetty.alpn;version="[1,)";resolution=optional,*</Import-Package>
                 <!-- override "internal" private package convention -->
                 <Private-Package>!*</Private-Package>
               </instructions>
