--- a/pom.xml
+++ b/pom.xml
@@ -109,8 +109,20 @@
         <!-- Our Javadoc has poor enough quality to fail the build thanks to JDK8 javadoc which got more strict. -->
         <maven.javadoc.failOnError>false</maven.javadoc.failOnError>
         <!-- npn-boot does not work with JDK 8 -->
-        <jetty.alpn.version>8.0.0.v20140317</jetty.alpn.version>
+        <jetty.alpn.version>8.1.0.v20141016</jetty.alpn.version>
         <argLine.bootcp>-Xbootclasspath/p:${jetty.alpn.path}</argLine.bootcp>
+      </properties>
+    </profile>
+    <profile>
+      <id>alpn-8u25</id>
+      <activation>
+        <property>
+          <name>java.version</name>
+          <value>1.8.0_25</value>
+        </property>
+      </activation>
+      <properties>
+        <jetty.alpn.version>8.1.1.v20141016</jetty.alpn.version>
       </properties>
     </profile>
     <profile>
@@ -283,7 +295,7 @@
       </activation>
       <properties>
         <jetty.npn.version>1.1.6.v20130911</jetty.npn.version>
-        <jetty.alpn.version>7.0.0.v20140317</jetty.alpn.version>
+        <jetty.alpn.version>7.1.0.v20141016</jetty.alpn.version>
         <!-- Defer definition of Xbootclasspath to default or forcenpn profile -->
       </properties>
     </profile>
@@ -297,7 +309,7 @@
       </activation>
       <properties>
         <jetty.npn.version>1.1.6.v20130911</jetty.npn.version>
-        <jetty.alpn.version>7.0.0.v20140317</jetty.alpn.version>
+        <jetty.alpn.version>7.1.0.v20141016</jetty.alpn.version>
         <!-- Defer definition of Xbootclasspath to default or forcenpn profile -->
       </properties>
     </profile>
@@ -311,7 +323,7 @@
       </activation>
       <properties>
         <jetty.npn.version>1.1.6.v20130911</jetty.npn.version>
-        <jetty.alpn.version>7.0.0.v20140317</jetty.alpn.version>
+        <jetty.alpn.version>7.1.0.v20141016</jetty.alpn.version>
         <!-- Defer definition of Xbootclasspath to default or forcenpn profile -->
       </properties>
     </profile>
@@ -324,8 +336,8 @@
         </property>
       </activation>
       <properties>
-        <jetty.npn.version>1.1.7.v20140316</jetty.npn.version>
-        <jetty.alpn.version>7.0.0.v20140317</jetty.alpn.version>
+        <jetty.npn.version>1.1.8.v20141013</jetty.npn.version>
+        <jetty.alpn.version>7.1.0.v20141016</jetty.alpn.version>
         <!-- Defer definition of Xbootclasspath to default or forcenpn profile -->
       </properties>
     </profile>
@@ -338,8 +350,8 @@
         </property>
       </activation>
       <properties>
-        <jetty.npn.version>1.1.7.v20140316</jetty.npn.version>
-        <jetty.alpn.version>7.0.0.v20140317</jetty.alpn.version>
+        <jetty.npn.version>1.1.8.v20141013</jetty.npn.version>
+        <jetty.alpn.version>7.1.0.v20141016</jetty.alpn.version>
         <!-- Defer definition of Xbootclasspath to default or forcenpn profile -->
       </properties>
     </profile>
@@ -352,8 +364,8 @@
         </property>
       </activation>
       <properties>
-        <jetty.npn.version>1.1.7.v20140316</jetty.npn.version>
-        <jetty.alpn.version>7.0.0.v20140317</jetty.alpn.version>
+        <jetty.npn.version>1.1.8.v20141013</jetty.npn.version>
+        <jetty.alpn.version>7.1.0.v20141016</jetty.alpn.version>
         <!-- Defer definition of Xbootclasspath to default or forcenpn profile -->
       </properties>
     </profile>
@@ -366,8 +378,36 @@
         </property>
       </activation>
       <properties>
-        <jetty.npn.version>1.1.7.v20140316</jetty.npn.version>
-        <jetty.alpn.version>7.0.0.v20140317</jetty.alpn.version>
+        <jetty.npn.version>1.1.8.v20141013</jetty.npn.version>
+        <jetty.alpn.version>7.1.0.v20141016</jetty.alpn.version>
+        <!-- Defer definition of Xbootclasspath to default or forcenpn profile -->
+      </properties>
+    </profile>
+    <profile>
+      <id>npn-alpn-7u71</id>
+      <activation>
+        <property>
+          <name>java.version</name>
+          <value>1.7.0_71</value>
+        </property>
+      </activation>
+      <properties>
+        <jetty.npn.version>1.1.9.v20141016</jetty.npn.version>
+        <jetty.alpn.version>7.1.0.v20141016</jetty.alpn.version>
+        <!-- Defer definition of Xbootclasspath to default or forcenpn profile -->
+      </properties>
+    </profile>
+    <profile>
+      <id>npn-alpn-7u72</id>
+      <activation>
+        <property>
+          <name>java.version</name>
+          <value>1.7.0_72</value>
+        </property>
+      </activation>
+      <properties>
+        <jetty.npn.version>1.1.9.v20141016</jetty.npn.version>
+        <jetty.alpn.version>7.1.0.v20141016</jetty.alpn.version>
         <!-- Defer definition of Xbootclasspath to default or forcenpn profile -->
       </properties>
     </profile>
@@ -394,9 +434,9 @@
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
     <jboss.marshalling.version>1.3.18.GA</jboss.marshalling.version>
-    <jetty.npn.version>1.1.7.v20140316</jetty.npn.version>
+    <jetty.npn.version>1.1.9.v20141016</jetty.npn.version>
     <jetty.npn.path>${settings.localRepository}/org/mortbay/jetty/npn/npn-boot/${jetty.npn.version}/npn-boot-${jetty.npn.version}.jar</jetty.npn.path>
-    <jetty.alpn.version>8.0.0.v20140317</jetty.alpn.version>
+    <jetty.alpn.version>8.1.0.v20141016</jetty.alpn.version>
     <jetty.alpn.path>${settings.localRepository}/org/mortbay/jetty/alpn/alpn-boot/${jetty.alpn.version}/alpn-boot-${jetty.alpn.version}.jar</jetty.alpn.path>
     <argLine.common>
       -server
@@ -470,7 +510,7 @@
       <dependency>
         <groupId>org.eclipse.jetty.npn</groupId>
         <artifactId>npn-api</artifactId>
-        <version>1.1.0.v20120525</version>
+        <version>1.1.1.v20141010</version>
       </dependency>
       <dependency>
         <groupId>org.mortbay.jetty.npn</groupId>
@@ -480,7 +520,7 @@
       <dependency>
         <groupId>org.eclipse.jetty.alpn</groupId>
         <artifactId>alpn-api</artifactId>
-        <version>1.0.0</version>
+        <version>1.1.0.v20141014</version>
       </dependency>
       <dependency>
         <groupId>org.mortbay.jetty.alpn</groupId>
@@ -918,7 +958,7 @@
               <instructions>
                 <Export-Package>${project.groupId}.*</Export-Package>
                 <!-- enforce JVM vendor package as optional -->
-                <Import-Package>sun.misc.*;resolution:=optional,sun.nio.ch;resolution:=optional,sun.security.*;resolution:=optional,org.eclipse.jetty.alpn;version="[1,)";resolution=optional,*</Import-Package>
+                <Import-Package>sun.misc.*;resolution:=optional,sun.nio.ch;resolution:=optional,sun.security.*;resolution:=optional,org.eclipse.jetty.npn;version="[1,)";resolution=optional,org.eclipse.jetty.alpn;version="[1,)";resolution=optional,*</Import-Package>
                 <!-- override "internal" private package convention -->
                 <Private-Package>!*</Private-Package>
               </instructions>
