--- a/pom.xml
+++ b/pom.xml
@@ -567,7 +567,7 @@
       <dependency>
         <groupId>${project.groupId}</groupId>
         <artifactId>netty-tcnative</artifactId>
-        <version>1.1.30.Fork2</version>
+        <version>1.1.30.Fork3-SNAPSHOT</version>
         <classifier>${os.detected.classifier}</classifier>
         <scope>compile</scope>
         <optional>true</optional>
