Fix missing version properties of transport-epoll in all-in-one JAR
Related: #2952

Motivation:

META-INF/io.netty.versions.properties in netty-all-*.jar does not
contain the version information about the netty-transport-epoll module.

Modifications:

Fix a bug in the regular expression in pom.xml, so that the artifacts
with a classifier is also included in the version properties file.

Result:

The version information of all modules are included in the version
properties file, and Version.identify() does not miss
netty-transport-epoll.

--- a/all/pom.xml
+++ b/all/pom.xml
@@ -289,7 +289,7 @@
             <configuration>
               <target>
                 <taskdef resource="net/sf/antcontrib/antlib.xml" />
-                <propertyselector property="versions" match="^(${project.groupId}:(?!netty-example)[^:]+:jar)$" select="\1" />
+                <propertyselector property="versions" match="^(${project.groupId}:(?!netty-example)[^:]+:jar(?::[^:]+)?)$" select="\1" />
                 <for list="${versions}" param="x">
                   <sequential>
                     <unzip src="${@{x}}" dest="${dependencyVersionsDir}">
