--- a/.travis.yml
+++ b/.travis.yml
@@ -1,12 +1,8 @@
 language: java
 jdk:
+  - oraclejdk8
   - oraclejdk7
   - openjdk7
-branches:
-  only:
-    - master
-    - 3
-    - 3.5
 before_install: 'mvn -version'
-install: 'mvn clean install -Pfull -DskipTests'
-
+install: 'mvn clean install -Pfull -DskipTests=true'
+script: 'mvn test -Pleak'
