Travis CI configuration file updates
Motiviation:
Travis CI configuration file is out of date for the 4.x branch.

Modifications:
Update .travis.yml file

Result:
Travis CI configuration file should be up to date for 4.x branch.

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,12 +1,9 @@
 language: java
 jdk:
+  - oraclejdk8
   - oraclejdk7
   - openjdk7
-branches:
-  only:
-    - master
-    - 3
-    - 3.5
+  - openjdk6
 before_install: 'mvn -version'
-install: 'mvn clean install -Pfull -DskipTests'
-
+install: 'mvn clean install -Pfull -DskipTests=true'
+script: 'mvn test -Pleak'
