--- a/pom.xml
+++ b/pom.xml
@@ -401,6 +401,7 @@
     <argLine.common>
       -server
       -dsa -da -ea:io.netty...
+      -Xmx4g
       -XX:+AggressiveOpts
       -XX:+TieredCompilation
       -XX:+UseBiasedLocking
