--- a/.travis.yml
+++ b/.travis.yml
@@ -10,5 +10,5 @@ before_install:
 install: 'mvn clean install -Pfull -DskipTests=true'
 before_script:
     - "echo $JAVA_OPTS"
-    - "export JAVA_OPTS=-Xmx4g"
+    - "export JAVA_OPTS=-Xmx4g -Xms2g"
 script: 'mvn test -Pleak'
