--- a/example/pom.xml
+++ b/example/pom.xml
@@ -21,7 +21,7 @@
   <parent>
     <groupId>io.netty</groupId>
     <artifactId>netty-parent</artifactId>
-    <version>4.0.24.Final</version>
+    <version>4.0.25.Final-SNAPSHOT</version>
   </parent>
 
   <artifactId>netty-example</artifactId>
