--- a/example/pom.xml
+++ b/example/pom.xml
@@ -85,5 +85,25 @@
       <artifactId>netty-transport-rxtx</artifactId>
       <version>${project.version}</version>
     </dependency>
+
+      <dependency>
+          <groupId>org.slf4j</groupId>
+          <artifactId>slf4j-api</artifactId>
+          <!--<version>1.7.6</version>-->
+      </dependency>
+
+      <!--<dependency>-->
+          <!--<groupId>ch.qos.logback</groupId>-->
+          <!--<artifactId>logback-classic</artifactId>-->
+          <!--<version>1.0.13</version>-->
+      <!--</dependency>-->
+
+      <!--<dependency>-->
+          <!--<groupId>ch.qos.logback</groupId>-->
+          <!--<artifactId>logback-core</artifactId>-->
+          <!--<version>1.0.13</version>-->
+      <!--</dependency>-->
+
+
   </dependencies>
 </project>
