--- a/testsuite/pom.xml
+++ b/testsuite/pom.xml
@@ -49,6 +49,13 @@
     	<artifactId>netty-transport-udt</artifactId>
     	<version>${project.version}</version>
     </dependency>
+
+      <dependency>
+          <groupId>org.slf4j</groupId>
+          <artifactId>slf4j-api</artifactId>
+          <version>1.7.6</version>
+      </dependency>
+
   </dependencies>
 
   <build>
