--- a/testsuite-osgi/testsuite-osgi-exam/pom.xml
+++ b/testsuite-osgi/testsuite-osgi-exam/pom.xml
@@ -193,6 +193,25 @@
       <scope>test</scope>
     </dependency>
 
+      <dependency>
+          <groupId>org.slf4j</groupId>
+          <artifactId>slf4j-api</artifactId>
+          <version>1.7.6</version>
+      </dependency>
+
+      <dependency>
+          <groupId>ch.qos.logback</groupId>
+          <artifactId>logback-classic</artifactId>
+          <version>1.0.13</version>
+          <!--<scope>provided</scope>-->
+      </dependency>
+
+      <dependency>
+          <groupId>ch.qos.logback</groupId>
+          <artifactId>logback-core</artifactId>
+          <version>1.0.13</version>
+      </dependency>
+
   </dependencies>
 
   <build>
