Rename from 'The Netty project' to 'Netty'
Motivation:

Sonar uses the project name in the pom.xml as the project name. (no pun
intended) 4.x and master uses 'Netty' as the project name, so we should
be consistent.

Modifications:

Rename the project from 'The Netty project' to 'Netty'

Result:

Prettier SonarQube result

--- a/pom.xml
+++ b/pom.xml
@@ -28,7 +28,7 @@
   <packaging>bundle</packaging>
   <version>3.9.6.Final-SNAPSHOT</version>
 
-  <name>The Netty Project</name>
+  <name>Netty</name>
   <url>http://netty.io/</url>
   <description>
     The Netty project is an effort to provide an asynchronous event-driven
