Work around the Javadoc failure in JDK 8
Motivation:

Since JDK 1.8, javadoc has enabled a new feature called 'doclint', which
fails the build when javadoc has markup problems and more.

Modifications:

Do not fail the build until we fix our API documentation.

Result:

No more build failure because of malformed Javadoc

--- a/pom.xml
+++ b/pom.xml
@@ -253,6 +253,19 @@
     </dependency>
   </dependencies>
 
+  <profiles>
+    <profile>
+      <id>jdk8</id>
+      <activation>
+        <jdk>[1.8,)</jdk>
+      </activation>
+      <properties>
+        <!-- Our Javadoc has poor enough quality to fail the build thanks to JDK8 javadoc which got more strict. -->
+        <maven.javadoc.failOnError>false</maven.javadoc.failOnError>
+      </properties>
+    </profile>
+  </profiles>
+
   <properties>
     <attach-distribution>false</attach-distribution>
     <jboss.marshalling.version>1.3.14.GA</jboss.marshalling.version>
