--- a/pom.xml
+++ b/pom.xml
@@ -559,7 +559,7 @@
       <dependency>
         <groupId>${project.groupId}</groupId>
         <artifactId>netty-tcnative</artifactId>
-        <version>1.1.30.Fork3-SNAPSHOT</version>
+        <version>1.1.32.Fork1</version>
         <classifier>${os.detected.classifier}</classifier>
         <scope>compile</scope>
         <optional>true</optional>
